--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@livekit/components-react": "^2.6.5",
     "@livekit/components-styles": "^1.1.4",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -39,7 +39,7 @@
     "livekit-server-sdk": "^2.7.2",
     "lucide-react": "^0.452.0",
     "mime-types": "^2.1.35",
-    "next": "14.2.15",
+    "next": "^14.2.26",
     "next-themes": "^0.3.0",
     "query-string": "^9.1.1",
     "react": "^18",
@@ -61,9 +61,9 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "^15.2.4",
     "postcss": "^8",
-    "prisma": "^5.20.0",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
